# config-driven-ETL-framework

./: .bandit  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines-flint-only.yaml  azure-pipelines.yaml  azure-pipelines.yml  cicd.yml  example.json  example_join.json  pyproject.toml  requirements.txt
.azure-pipelines/: azure-pipelines.yml
.devcontainer/: .flake8  .gitmodules  .isort.cfg  .pylintrc  .wslconfig  Dockerfile  README.md  devcontainer.json  docker-compose.yml  pytest.ini
.devcontainer copy/python-spark/: devcontainer.json
.devcontainer/python-spark/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.devcontainer/stratum/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/bandit/: action.yml
.github/actions/black/: action.yml
.github/actions/flake8/: action.yml
.github/actions/install-package/: action.yaml
.github/actions/isort/: action.yml
.github/actions/mypy/: action.yml
.github/actions/poetry-build/: action.yaml
.github/actions/poetry-install/: action.yaml
.github/actions/poetry-setup/: action.yaml
.github/actions/pylint/: action.yml
.github/actions/pyre/: action.yml
.github/actions/pyright/: action.yml
.github/actions/pytest/: action.yml
.github/actions/ruff-formatter/: action.yml
.github/actions/ruff-linter/: action.yml
.github/actions/run-bandit/: action.yml
.github/actions/run-flake8/: action.yml
.github/actions/run-mypy/: action.yml
.github/actions/run-pylint/: action.yml
.github/actions/run-pyright/: action.yml
.github/actions/run-pytest/: action.yml
.github/actions/run-ruff-formatter/: action.yml
.github/actions/run-ruff-linter/: action.yml
.github/actions/run-semgrep/: action.yml
.github/actions/run-trufflehog/: action.yml
.github/actions/run-vulture/: action.yml
.github/actions/setup-poetry/: action.yaml
.github/actions/setup-python/: action.yaml
.github/actions/vulture/: action.yml
.github/config/: .coveragerc  .flake8  .pylintrc  bandit.ini  mypy.ini  ruff.toml  semgrep.yaml  vulture.toml
.github/instructions/: design_principles.instructions.md  documentation.instructions.md  python.instructions.md  python_test.instructions.md
.github/scripts/: install-package.sh  poetry-build.sh  poetry-get-version.sh  poetry-install.sh  poetry-setup.sh  run-bandit.sh  run-flake8.sh  run-install-package.sh  run-mypy.sh  run-poetry-lock.sh  run-pylint.sh  run-pyright.sh  run-pytest.sh  run-ruff-formatter.sh  run-ruff-linter.sh  run-semgrep.sh  run-trufflehog.sh  run-vulture.sh
.github/workflows/: auto-format.yml  build-and-test.yml  cd.yml  ci.yaml  ci.yml  devcontainer-build.yml  poetry-install.yml  python-ci.yml  release.yml  validate-jobs.yml
.tools/: .flake8  .isort.cfg  .pylintrc  .pyre_configuration  README.md  pyrightconfig.json  pytest.ini  ruff.toml
config/: .coveragerc  .flake8  .pylintrc  semgrep.yaml  trufflehog.toml
datastore/: __init__.py  file.py  file_handler.py  job.py  logger.py  logger_test.py  reader.py  reader_factory.py  reader_test.py  schema.py  spark.py  spark_handler.py  spark_test.py  writer.py  writer_factory.py
datastore/engine/: spark_handler.py
datastore/engine/transforms/: column.py
datastore/extract/: __init__.py  base.py  factory.py  file.py  strategy.py
datastore/load/: __init__.py  base.py  factory.py  file.py  strategy.py
datastore/models/: job_spec.py  main.py
datastore/models/job/: extract_spec.py  load_spec.py  strategy_spec.py  transform_spec.py
datastore/reader/: parquet_reader.py  parquet_reader_test.py
datastore/readers/: __init__.py  parquet_reader.py  reader_file.py
datastore/transform/: __init__.py  base.py  basic.py  column_cast.py  factory.py  strategy.py
datastore/transform/functions/: column.py  column_cast.py
datastore/utils/: file_handler.py  json_handler.py
datastore/writers/: __init__.py  writer_file.py
docs/: README.md  architecture.md  cli.md  getting_started.md  sequence_diagram.plantuml
docs/alert/: README.md  channels.md  triggers.md
docs/runtime/: README.md  spark.md  transforms.md
docs/source/: about.rst  index.rst  installation.rst
docs/users/alert/: channels.md
docs/users/alerting/: README.md  channels.md  (+1 more)
examples/: README.md  customer_orders.json  example.md  job.json  job.jsonc  sensor_config.json
examples/join_select/: alert.jsonc  customers_schema.json  job.jsonc  orders_schema.json
scripts/: bandit.sh  black.sh  devskim.sh  flake8.sh  graudit.sh  isort.sh  mypy.sh  ossaudit.sh  pylint.sh  pyre.sh  pyright.sh  pytest_and_coverage.sh  ruff_formatter.sh  ruff_linter.sh  run-build-package.sh  run-pytest.sh  run-semgrep.sh  run-trufflehog.sh  semgrep.sh  setup-poetry.sh  trufflehog.sh  vulture.sh
src/flint/: __init__.py  __main__.py  cli.py  exceptions.py  types.py
src/ingestion_framework/: __init__.py  __main__.py  exceptions.py  types.py
src/samara/: cli.py
stratum/: README.md  azure-pipelines.yml  pyproject.toml
stratum/tests/: conftest.py
tests/: __init__.py  conftest.py  file_handler_test.py  file_test.py  job_test.py  logger_test.py  reader_factory_test.py  reader_test.py  schema_test.py  spark_handler_test.py  spark_test.py  writer_factory_test.py  writer_test.py
tests/e2e/: README.md  test_main.py
tests/extract/: base_extract_test.py  base_format_test.py  base_method_test.py  base_spec_test.py  base_test.py  factory_test.py  file_test.py
tests/load/: __init__.py  base_format_test.py  base_load_test.py  base_method_test.py  base_operation_test.py  base_spec_test.py  base_test.py  factory_test.py  file_test.py
tests/readers/: reader_file_test.py
tests/transform/: base_spec_test.py  base_transform_test.py  column_cast_test.py  factory_test.py
tests/unit/: logger_test.py  test_cli.py  test_cli_logging_order.py  test_exit_codes.py  test_main.py  test_types.py
tests/unit_tests/: logger_test.py  reader_factory_test.py  reader_test.py  spark_test.py
tests/writers/: writer_file_test.py
(+493 files in other folders)
