[tool.poetry]
name = "flint"
version = "0.0.1"
description = "Config Driven Pyspark Framework"
authors = ["Krijn van der Burg"]
readme = "README.md"
packages = [{ include = "flint", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
pandas = "^2.3.0"
pyyaml = "^6.0.1"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.0"
pytest-cov = ">=2.0.0"
pytest-xdist = ">=3.6.1"

[tool.poetry.group.cicd.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
